--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ body{
 
 button{
     margin: 10px;
+    margin-bottom: 10px;
+
 }
 
 
@@ -18,13 +20,14 @@ button{
 
         float: left;
         display: block;
-        width: 87px;
-        height:87px;
+        width: 25%;
+        height: 25%;
         border: 1px solid;
+        background-size: 410%;
+
     }
-    img{
-        width: 86px;
-    }
+
+
     h1{
         font-size: 20px;
     }
@@ -37,13 +40,11 @@ button{
 
         float: left;
         display: block;
-        width: 87px;
-        height: 87px;
+        width: 25%;
+        height: 25%;
         border: 1px solid;
     }
-    img{
-        width: 86px;
-    }
+
     h1{
         font-size: 36px;
     }
@@ -59,13 +60,12 @@ button{
 
         float: left;
         display: block;
-        width: 122px;
-        height: 122px;
+        width: 25%;
+        height: 25%;
         border: 1px solid;
+
     }
-    img{
-        width: 120px;
-    }
+
     h1{
         font-size: 36px;
     }
