--- a/css/style.css
+++ b/css/style.css
@@ -12,16 +12,15 @@ button{
 
 @media (min-width: 0px) {
 
-    .block{
+    .blocks{
         width: 350px;
         height: 350px;
+        margin-bottom: 100px;
     }
     .bl {
 
         float: left;
         display: block;
-        width: 25%;
-        height: 25%;
         border: 1px solid;
         background-size: 410%;
 
@@ -35,13 +34,14 @@ button{
 }
 
 @media (min-width: 780px) {
+    .blocks{
+        margin-bottom: 100px;
+    }
 
     .bl {
 
         float: left;
         display: block;
-        width: 25%;
-        height: 25%;
         border: 1px solid;
     }
 
@@ -52,16 +52,15 @@ button{
 }
 
 @media (min-width: 1280px) {
-    .block{
+    .blocks{
         width: 490px;
         height: 490px;
+        margin-bottom: 100px;
     }
     .bl {
 
         float: left;
         display: block;
-        width: 25%;
-        height: 25%;
         border: 1px solid;
 
     }
